# lightweight-charts-python

./: README.md  package.json  pyproject.toml  setup.py
examples/1_setting_data/: setting_data.py
examples/7_panes/: pane.py
examples/9_01_subcharts/: drawings.json  pane.py  subcharts.py
lightweight_charts/: abstract.py  chart.py
lightweight_charts/js/: bundle.js  index.html  lightweight-charts.standalone.development.js
src/drawing/: pane-renderer.ts  pane-view.ts
src/general/: handler.ts  legend.ts
src/horizontal-line/: axis-view.ts
src/vertical-line/: axis-view.ts
test/: test_chart.py  util.py
