[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightweight_charts"
version = "3.0.0"
description = "A lightweight charting library for Python"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = []  # Add required dependencies here

[tool.setuptools]
packages = ["lightweight_charts"]
