[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightweight-charts-v5"
version = "1.0.0"
description = "Python framework for TradingView's Lightweight Charts JavaScript library (v5.x)."
authors = [
    { name = "louisnw", email = "louisnw@mail.com" },
    { name = "Phong Tran", email = "tranthanhphong91@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "pywebview>=5.0.5"
]


[project.urls]
Homepage = "https://github.com/tran-thanh-phong/lightweight-charts-python"
Repository = "https://github.com/tran-thanh-phong/lightweight-charts-python"
Documentation = "https://github.com/tran-thanh-phong/lightweight-charts-python/blob/main/README.md"


[tool.setuptools]
packages = ["lightweight_charts"]


[tool.setuptools.package-data]
"lightweight_charts" = ["js/*"]